# dolphin

./: .gitmodules  CMakeLists.txt
Source/Android/: build.gradle
Source/Android/app/: build.gradle
Source/Core/Common/: Arm64Emitter.cpp  Arm64Emitter.h  CommonFuncs.cpp
Source/Core/Common/GL/GLExtensions/: GLExtensions.cpp
Source/Core/Common/GL/GLInterface/: EGL.cpp
Source/Core/Core/: CMakeLists.txt
Source/Core/Core/Config/: GraphicsSettings.cpp  GraphicsSettings.h
Source/Core/Core/FifoPlayer/: FifoPlayer.cpp
Source/Core/Core/HW/: GPFifo.cpp  GPFifo.h
Source/Core/Core/PowerPC/: JitInterface.cpp  PPCTables.cpp  PPCTables.h
Source/Core/Core/PowerPC/Jit64/: Jit.cpp  Jit.h
Source/Core/DolphinNoGUI/: MainNoGUI.cpp
Source/Core/DolphinQt2/: CMakeLists.txt  DolphinQt2.vcxproj  FIFOWindow.cpp  FIFOWindow.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  Settings.cpp  Settings.h
Source/Core/UICommon/: CommandLineParse.cpp
Source/Core/VideoBackends/: CMakeLists.txt
Source/Core/VideoBackends/MTL/: CMakeLists.txt  VideoBackend.h  main.cpp
Source/Core/VideoBackends/OGL/: ProgramShaderCache.cpp  Render.cpp
Source/Core/VideoBackends/Vulkan/: CMakeLists.txt  FramebufferManager.cpp  FramebufferManager.h  Renderer.cpp  ShaderCompiler.cpp  StateTracker.cpp  StateTracker.h  VulkanContext.cpp
Source/Core/VideoCommon/: DriverDetails.cpp  DriverDetails.h  GeometryShaderGen.cpp  PixelShaderGen.cpp  PixelShaderGen.h  ShaderGenCommon.h  UberShaderPixel.cpp  UberShaderVertex.cpp  VertexShaderGen.cpp  VideoBackendBase.cpp  VideoConfig.h
(+10 files in other folders)
